[package]
name = "pbinfo-api"
version = "1.0.0"
edition = "2021"
description = "A rust api for pbinfo"
license = "GPL2"
authors = ["https://github.com/insertokername/"]

[dependencies]
directories = "6.0.0"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["multipart","cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
